--- a/style.css
+++ b/style.css
@@ -10,13 +10,27 @@
 html, body {margin: 0;}
 
 .container {
-  width: 320px;
-  height: 200px;
   margin: 0 auto;
   text-align: center;
-  border: 1px solid black;
 }
 
 h1 {
   font-family: 'LAB디지털';
+  margin: 20px auto;
+  font-size: 50px;
+}
+
+button {
+  margin: 0 10px;
+  border: none;
+  border-radius: 10px;
+}
+
+button:hover {
+  background-color: red;
+  color: white;
+}
+
+#bt_start, #bt_stop, #bt_reset {
+  padding: 15px;
 }
